tests/snapshots/validator_snapshots__validator_all@validator-123.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/spec/12_control_flow/break_continue.of
---
ParserError(
    "unexpected token 'for'",
)
