tests/snapshots/validator_snapshots__validator_all@validator-125.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/spec/12_control_flow/while_loop.of
---
ParserError(
    "unexpected token 'var'",
)
