tests/snapshots/validator_snapshots__validator_all@validator-126.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/spec/13_iterators/iterator_interface.of
---
ParserError(
    "unexpected token '('",
)
