tests/snapshots/validator_snapshots__validator_all@validator-128.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/spec/14_ffi/extern_function_export.of
---
ValidationErrors(
    [
        "invalid operator 'Add' for operand of type 'null' in function 'test_module::on_tick'",
        "type mismatch in function 'test_module::on_tick' (binary Add): expected 'null', found 'int64'",
        "unknown member 'counter' on 'null' in function 'test_module::on_tick'",
        "unknown member 'counter' on 'null' in function 'test_module::on_tick'",
        "unknown type 'MyStruct' in module 'test_module'",
    ],
)
