tests/snapshots/validator_snapshots__validator_all@validator-129.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/spec/14_ffi/extern_function_import.of
---
ValidationErrors(
    [
        "unknown type 'Buffer' in module 'test_module'",
    ],
)
