tests/snapshots/validator_snapshots__validator_all@validator-13.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/language/13_null.of
---
ParserError(
    "unexpected token 'if'",
)
