tests/snapshots/validator_snapshots__validator_all@validator-130.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/spec/14_ffi/extern_struct.of
---
Ok
