tests/snapshots/validator_snapshots__validator_all@validator-131.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/spec/14_ffi/pin_unpin.of
---
ParserError(
    "unexpected token '*'",
)
