tests/snapshots/validator_snapshots__validator_all@validator-132.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/spec/14_ffi/pinning_example.of
---
ParserError(
    "unexpected token '*'",
)
